# ChangeLog for x11-misc/treeline
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/treeline/ChangeLog,v 1.57 2013/09/05 19:44:50 mgorny Exp $

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> treeline-1.4.1-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*treeline-1.4.1-r1 (22 Jul 2013)

  22 Jul 2013; Jeroen Roovers <jer@gentoo.org> +treeline-1.4.1-r1.ebuild:
  Migrate to python-*-r1.eclass.

  22 Jul 2013; Jeroen Roovers <jer@gentoo.org> -treeline-1.4.0.ebuild:
  Old.

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> treeline-1.4.1.ebuild:
  Stable for ppc, wrt bug #461386

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> treeline-1.4.1.ebuild:
  Stable for x86, wrt bug #461386

  12 Mar 2013; Agostino Sarubbo <ago@gentoo.org> treeline-1.4.1.ebuild:
  Stable for amd64, wrt bug #461386

*treeline-1.4.1 (04 Jun 2012)

  04 Jun 2012; Michael Weber <xmw@gentoo.org> +treeline-1.4.1.ebuild:
  Version bump (reported by df, bug 416011)

  01 May 2012; Jeroen Roovers <jer@gentoo.org>
  +files/treeline-1.2.3-nocompile.patch:
  Put back the patch by Tommy Pettersson (bug #413985).

  24 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/treeline-1.2.3-nocompile.patch, -treeline-1.2.3.ebuild,
  -treeline-1.2.4.ebuild, treeline-1.4.0.ebuild:
  Remove all overshadowed ebuilds. Pick only aspell dict as ispell is going out.

  04 Jan 2012; Brent Baude <ranger@gentoo.org> treeline-1.4.0.ebuild:
  Marking treeline-1.4.0 ppc for bug 391511

  07 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> treeline-1.4.0.ebuild:
  x86 stable wrt bug #391511

  04 Dec 2011; Markos Chandras <hwoarang@gentoo.org> treeline-1.4.0.ebuild:
  Add missing die statements. stable on amd64. bug #391511

  14 Oct 2011; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove extraneous maintainer tag.

*treeline-1.4.0 (11 Oct 2011)

  11 Oct 2011; Jeroen Roovers <jer@gentoo.org> -treeline-1.3.3.ebuild,