@@ -1,11 +1,0 @@
-DEFINED_PHASES=install
-DEPEND=x11-libs/libX11 x11-libs/libXext x11-libs/libXt x11-proto/xextproto x11-proto/xproto
-DESCRIPTION=Dali Clock is a digital clock. When a digit changes, it melts into its new shape.
-EAPI=5
-HOMEPAGE=http://www.jwz.org/xdaliclock
-KEYWORDS=~amd64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
-LICENSE=BSD
-RDEPEND=x11-libs/libX11 x11-libs/libXext x11-libs/libXt
-SLOT=0
-SRC_URI=http://www.jwz.org/xdaliclock/xdaliclock-2.39.tar.gz
-_md5_=76d45aeaa0f952f4bdd0f95edc41316a
