@@ -7,5 +7,5 @@ KEYWORDS=~amd64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
 LICENSE=BSD
 RDEPEND=x11-libs/libX11 x11-libs/libXext x11-libs/libXt
 SLOT=0
-SRC_URI=http://www.jwz.org/xdaliclock/xdaliclock-2.40.tar.gz
-_md5_=25730a890641ea9361506ee2fa80928d
+SRC_URI=http://www.jwz.org/xdaliclock/xdaliclock-2.41.tar.gz
+_md5_=a6bb79fa0d0b29404cc1975962801f0c
