@@ -1,10 +1,0 @@
-DEFINED_PHASES=compile install
-DEPEND=x11-libs/libXtst x11-libs/libXmu x11-libs/libXaw x11-libs/libXaw3d x11-libs/libXt x11-misc/imake x11-misc/gccmakedep x11-proto/xproto x11-proto/inputproto app-text/rman x11-proto/xextproto
-DESCRIPTION=virtual keyboard for X window system
-HOMEPAGE=http://homepage3.nifty.com/tsato/xvkbd/
-KEYWORDS=amd64 ppc x86
-LICENSE=GPL-2
-RDEPEND=x11-libs/libXtst x11-libs/libXmu x11-libs/libXaw x11-libs/libXaw3d x11-libs/libXt
-SLOT=0
-SRC_URI=http://homepage3.nifty.com/tsato/xvkbd/xvkbd-3.2.tar.gz
-_md5_=c07e8fdc93a81228954b194b2dc7622c
