@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=x11-libs/libX11 x11-libs/libXaw x11-libs/libXaw3d x11-libs/libXmu x11-libs/libXt x11-libs/libXtst app-text/rman x11-misc/gccmakedep x11-misc/imake x11-proto/inputproto x11-proto/xextproto x11-proto/xproto
+DESCRIPTION=virtual keyboard for X window system
+EAPI=5
+HOMEPAGE=http://homepage3.nifty.com/tsato/xvkbd/
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=x11-libs/libX11 x11-libs/libXaw x11-libs/libXaw3d x11-libs/libXmu x11-libs/libXt x11-libs/libXtst
+SLOT=0
+SRC_URI=http://homepage3.nifty.com/tsato/xvkbd/xvkbd-3.5.tar.gz
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=0ac4da603cc402e192c3381d968f1c9f
