@@ -3,27 +3,17 @@ Hash: SHA256
 
 AUX treeline-1.2.3-nocompile.patch 605 SHA256 3f988b01f5234f69fd5735d37a86547a7145bbbfe03938c2ea99e54f300933e5 SHA512 af9fa807567a57b4ced1dd2f32286347099f3c42da8dc980db80d0f1752f5518ac37a268c4914267bf546d42749c1d2de89a9ba362e61d8c4289e810272a9189 WHIRLPOOL 81e14856ea0f351f237ebb74b7f5adbfea1fb1a74554be90ad76fd9ce454f7ed8cb95d938806b30131add580eae976d68a663431c9b16d39fd725de9db8da508
 DIST treeline-1.4.1.tar.gz 499500 SHA256 d66e0fcae9bcb5e54f664381f6af73f360f9ff46c91787a126c7197fbe685489 SHA512 85e87d4201eca19fb4255eacef89b7975f982a32790e74b5a35ab37e42e316eb45a1518f093097141dc5db1a8a090537f42e35fddf3f51b3ae4cf4c812f9ea95 WHIRLPOOL 7f97e943d86f6f94fd32dbb2836ed9a5f1cd38c777322962b7809705f48886ad4988c3739907020976ee0aa798d5b9b76302d05fb753f642fa839cd556175312
+DIST treeline-1.9.4.tar.gz 327826 SHA256 eb26c836024687c2cbe386c129d49b72891333d6908ba6b7109aa1bad58a2f62 SHA512 be9a2dd385a941794adb779a3f4deec4d855ec2dbcfb92ed421879c212ab78dcc401dc0ee7fbdbd075faa60f3d290219877bcf97376e9df4d00d1cd9c2774f2d WHIRLPOOL 97682512a2f1461cee4230a2adeba47284a50263c3a2dbad2588bb503abbfc3ccb118f7832b7dd6b92946881ca79fc6a042f0d50d2d0c21f5549ca9c83773f5e
 DIST treeline-i18n-1.4.1a.tar.gz 279797 SHA256 891f086b0718336911ef118a4e25772c639cb48c1bea007031b5da075512e478 SHA512 82a79d24d451f5512c80b7647a6d10146649d2224c5ced8e5b402b44dea5d3d7cb00a3e8c96384d499fe2eb87dca686feb74a79db083e531fdb872218f54861b WHIRLPOOL cd8cac4419273369800314b7428e202586540e5b348203ab6567c73d1861e48b1f83e4f7c5c21da6fce9800d95bca71a5b057a81f2e22e64a2a656cd54d32dda
 EBUILD treeline-1.4.1-r1.ebuild 1437 SHA256 75d8989eb84a1276f75bc0abdb214cf5ad59afb6094c12b3f4c93198b5287207 SHA512 539330ccac6c560a771bfe42659581afba1860b2a0b5b27904c7fd4075d2ee6a7b87f00149b6722e9a885ae543d4abb1d0fc54c17f7918a9c8070c2928273cd9 WHIRLPOOL 4965ef280997372153103ff8f1056710c99dcaec182c9a39389a54b1204daf3854cee2dae0eb36d6bd696e2e84ef2c94efb19104871935222230225eda6341ac
 EBUILD treeline-1.4.1.ebuild 1724 SHA256 feefba33d51a2b4ec9c6f578eb330f65c7814da94f3e88a4dbba397a48b89bde SHA512 4edba79a719b8c0a4de934d33ee23eb82081f876bca634a53ec2d80105d669c8a93db83c143f54345edb3cae7e887acf8e1d0ab56bc08b33b6a36ec7b206b608 WHIRLPOOL 2813c2212654e7bc550f00714b59b180606729b483d85242fb226aa64b3011e2609c9d07f819b7097678ee08d7e91344ef1442481ba41bd8b7a080164b7c0933
-MISC ChangeLog 7914 SHA256 9c0a8727e3fe50880288b7b0d9e8cf8832b94486b2272e29bb1998fa16ee7b4e SHA512 dd4d1ae61ee48e292ac37f1c97170c92d04de5ac08bd6561ff0ed5db2286d99cc7f7b6a5fdbb1b5197ffda3de718dcb710c90c88fa2366c71fe2b178b7b47a34 WHIRLPOOL 92649e4e2c5d0b96ebc1bb1e62cefb3994a2ba84956e75a3f50780bf2dd1fb79db5bc59bb85ed6d5bdc97fdf8415a4668a6d1393cea9d98005cb8dd71c42ac56
+EBUILD treeline-1.9.4.ebuild 905 SHA256 10f5e46bb1810a3af0903a9a32b38bcdb35d692c166b16bc174c39ab6dc2426c SHA512 f95d0c2212f4b3886d56749fc9a83a676b352d7fda939bde97a32882c7fc83f21ce8bcbb5bd683eaf82ef7961d03a08a917adecd7b375debbbc34e94cf3edf72 WHIRLPOOL eb772274f83f2b6a3a086aa5c60ce9f6bd8e82f5f161e856df1145beee6ec139f234ab7dd20a4cb4ad965341959e297cdc8bfbfe9daf6e39a95eab48ec099a6c
+MISC ChangeLog 8030 SHA256 a661dbddb20d8105d9490fb78d68541031f77833b3a40e21f68b903b4c7b5463 SHA512 6ca384302b17fe46993ca5e301ef35ce27f2c6613149b70ece8f77794bda80860277b9bdf019cb74c8a5bdead0f54fadd64c6ffc938df9a9f376ed477e65b501 WHIRLPOOL f437bcdbe650a22afa5152647e34596a8195c72c6fb3bb5d1111052310070fe1c5732170b1d25ebbed32c14b85748eba577330dd88fa6cbc13c722deae9e5d05
 MISC metadata.xml 165 SHA256 d7da9ed29b7afb87ac00580d48a49d248f89c92269e9a7791782dc72f4490aec SHA512 243d1391ff105563c9bf0f75b1eab39434cfb69e084e81cebf6e4eb3aa391cd7e36210b2c3808895bf876dd761eb72330144af2a81e467453c60b37ccdf0e63c WHIRLPOOL f63c52b91f14d86972c7de46b5a50b2d47822a1347d627e05845027ff75299dc79a135988141e1dec933925c4e0213287ef6933ed76ed2fd3fcdff3757c1766b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSKN+FXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZObQQP/2xSPSRaJAywTvCdLmpRisCi
-UPfDmcsvGqjc55xQ10XsB5xGwiOcMpkRLD5ck2NPH++QkeIodqDV12UmRLlO0zQs
-+oVwquUKUE+ZAUSwYlRhT9Eit1tacN3H+W5Z+U89X/2/cJZVD88I1x09IM+w+k2E
-Fo7VATf4OyAXiEKoR5YrJzMJJ/8rrIAGmAVfDHBJaoCEXDtNQ7V/UXrE1IuyIsgX
-cnjETINbchf4eIPgeYgUt4d8rIQ2IqiXcbbmZHkW2G+RHTXhzxeKt6EAAwIcvi//
-3g9i1YGp0rqwdqTa76qmv9u9NH6qHp31QMPDoqRDSrWmzJ+2haK23pBVwLItSsvP
-99jK+06jd6RnaZoADOIFcERrC4rviOj/prZKXhNqa9ePPhixXodb0fLQECkSUnpw
-VgaABvyQx5f7SboHTO9yhgajiIRcgK00TXUQ3lm9JN5FsvHl231kHRveFpOmj4Ik
-o1Kko0Y5eeoTVWLl7nYbm2Isu1o2wD8X9ccER4ovBOt/OheVjDKOE0UHFqfjOku6
-fk8Tbkn8be1lx+EvFH5JLOItLlM6BjeEY9kVa5rrfgJ/8P0Z6z6VOV5f3TMSTeT/
-1k0fknrikoDKaVVW/eCJ3TJc543CuJkVnJg+2u89ynd4Z/1fYeTh9Ymw/u6Ap2b/
-qpUBHcwKvd0dYJakJ6FS
-=RsOe
+iEYEAREIAAYFAlN4N9kACgkQVWmRsqeSphMg/QCggSbTzc4ka05N/6k4/KSIdi7k
+PJgAn1OG+6IKvwieW2pl/4QML5KconR/
+=b2S2
 -----END PGP SIGNATURE-----
