@@ -2,17 +2,15 @@
 Hash: SHA256
 
 DIST xdaliclock-2.38.tar.gz 2275037 SHA256 0c1d0e212328972ad9e15ec0766130d081596f62521bf23244765b6d50169eee SHA512 ebfb99692f09fd7af7f55bcc1745a896bbdc717fc889fd8badb24e4e5615c1a6d81179e852e7b293e4a3f16e5a7ed3880d4390a8ba9e32e1bf8a1a65db8ff97f WHIRLPOOL 9ace90c37b80def6dd81dcbe4ccfef109263b83819e76fc7778241300f6e38b9564c25aacdf409b9d1f462a964473b40c5926a9f62c6fae0b695a79997a7d0b4
-DIST xdaliclock-2.39.tar.gz 1984794 SHA256 e1b7d060ecbfae28530e609f3261f346db888c7bb91163f949cad17a83fcc06a SHA512 ef33fb19cc425fb2491d563b173b21fe075ecf32b03099c01910196cabf3aec7efefd61561ee1b06bba122d3013352acaafb07d9d2ccefbcde1654a2134cfbc2 WHIRLPOOL 74e8b65703af33427cafd335206e9de16d91f3c03ac3a5d4b8361d86c268108ae4cb2a5438c8ef6457863f810d6446435399d91dd86fd04bad45281ebc8c3291
-DIST xdaliclock-2.40.tar.gz 2314291 SHA256 a745f2ebc2ca50288553eef1105e1d486c5e7d8c95648e46ca6ffc9d22df280e SHA512 8514b6c884572d293af5f6a296e8d7c44d78439c9019d2c3742f1a11ef69288a64d64d4d4eb2945f214cc72ef66f478178edbcc028fe002c055534255829d9a5 WHIRLPOOL ba49cdb45ac091d820f50185e3ebbc57a94cccc6020b2808d76a4dd3f410d0bc4d8ebab177ca18b543bb943b8048c44c8ffad3c073d0facc2213c2aa47c42b71
+DIST xdaliclock-2.41.tar.gz 2340437 SHA256 2d347347b7add0a7d535f5c59e811d495f5451b18fef54f1cc5124a3fe9633b3 SHA512 66f22a4cf16c63fbc01c1fcb6cd1a714e539669ccc088cf13ab792ab2d4407b5870b2a6e9caf998285efc74d0d70b2bed1f35e28af22ef412bf8842a5413e27a WHIRLPOOL a7486731fbf0e657c74f272d35113d4bbc591109e77dfcff33c309edb1502054db858cbb38b747246c4e08eb36ed5ee331afaf181f9694d1e26e8be6beb8963f
 EBUILD xdaliclock-2.38.ebuild 711 SHA256 f9639b1e29684e734518709633e1eda11ff197f6c60f6dfb61715679b4e7c7d2 SHA512 5ba8e333964e69221951274aebadbf4034bd0f5aef690c7d155cc26c0882c54bae6d2a756079e724a72f2cd6cfbedcba6120c2c2644ce0887e4443283e7d30ff WHIRLPOOL f6ff83a2c49803cc6efbf9c5cf629e1b1dbb4e91a01fef353d192722fddb3d1f31a9c5f78843f49f1e72988375a52cf1bacdb1672039baeef72b43cc0201043c
-EBUILD xdaliclock-2.39.ebuild 722 SHA256 bffcd423c0330c12674a6344a387bb877d0b49599749e66ebb1e58be8dc8aedd SHA512 c8d6b3fc4911c53863bfd54a0465877c20adada8896fac4829665ddad46fe7d1112953cfc7dc46d0754c3830ed69e849f3a160450b8b42167ca411e529ec87c6 WHIRLPOOL f30cb18d9714c0a8fd8b65f26c2fc92041d3424a3219c14e7b4d1efd3cd95bfb395ba9e7a45025a590636ec8beda22939aa903a3ee6ecac57e47eee27fa578dd
-EBUILD xdaliclock-2.40.ebuild 722 SHA256 4b5488dd79e0c8772e08c4a6086d871f7952706e42b1f25a97c3d0201ea1dd16 SHA512 bab65342383a49fac7843bac7c7074b7862d18b9fb626e0c4f52aa79e3f5224d5d93d0df9fb8af0d9ad5c56a09f885a53e752c05a5fc752a823f232ef3fc4632 WHIRLPOOL c5c1e2592072214ed0f6d6237a423393ba9e3865988972434d8fc2f7f2aac168ed3e5e62c3d0210c14671678d21bf3cf377317cd14d11b93f49224f04a075cb8
-MISC ChangeLog 5419 SHA256 68daa606bcd94272e9fae21fd9e8adee9795b89ac55954034ef4a9b98904eb15 SHA512 4b9d8d2067bb95757f28dd0f40ce7053aaca91184f517bf1afb174d3b2aed4cfd40736c1eac379f9e883cbaf969a6c8b16be657ad3c76a49455acf5c5de05341 WHIRLPOOL 6b026644a056d405c31f8ee5f87cfbdcd81d2fc7bf1aac9a8542263b926e5c9eecdd29703a03ec96bae7fe64a2fafc9030f82dafa5ca61be6bdf8ad52ff28e10
+EBUILD xdaliclock-2.41.ebuild 722 SHA256 45c8b3f76fe165aef03c679b952bea6f49b848934cd9b6c526682cb26a9f008a SHA512 264080f5669eaa18b72e53021f3b944beceef55ba4d0973ac5dc2a05dc8cc886a9b3cd8d337158a6a861f063d9c2005dcbfe0cd713e961f5440bc642882322f8 WHIRLPOOL dde10abc028bc0c4fd6d0c9cfbdab8f383d10c1798cb1c744a07770a040f3664b03f7a95bbee5b4373dffcc5dd859a96ada040aa66c945eee1d3668a36961b70
+MISC ChangeLog 5592 SHA256 20eea16559a852b8ae7da4063e9a7dc890a2d875bed2b236c5ae7f1cfa37dd4d SHA512 64ad9de7ea1130215d82db87ffafe672a49a0591c5ea9884ac7dd475ed04f4b23020c92dccc68524f50809c6208bbe7b386d19e7d44335c1d3843cb6030ced96 WHIRLPOOL 75780d64e975337484ceda744b724992179b9e5635d93efeaa99723ee95ae64b80e45821506bc83f84d837bf7a29061003f06347f480369b99d590d3c1705891
 MISC metadata.xml 166 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826 SHA512 23980b683f9a89f988407b1dcc27a4465a18912f6e6cf8e1fed46182f00c4023d4802434f36b9482121ba9ffe9bc5d6e91b5d3a4ba9067fcfd8e57799c128fe3 WHIRLPOOL 96d79ff499e108ad89b80507c2e94a09af1e8031e5e2a7f9cecb2dddbf517872361436bdb983dc580660064a62663ad63aa1fad8f49dd3758253f4e378bfd297
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlKe4FAACgkQknrdDGLu8JAQ8QD+IAg2B2FRjcboqRUlXzaTfNBM
-Zo0As8wSf9Vu97z99oIBAJI5gnM+nYnlhbmTZQo0ToRfMijGkPzgNdYhwmeFz2OT
-=xZ5Y
+iEYEAREIAAYFAlN4OcIACgkQVWmRsqeSphMc6wCdFu/s3evypRMottM18i8erWMX
+o9UAnA9fypVh+QhGFYwbaG5PQ6hC22cI
+=G7j1
 -----END PGP SIGNATURE-----
