@@ -1,20 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST xvkbd-3.2.tar.gz 78617 SHA256 93c4bdced9f13f22c367d990e98ffbc53f8210fa28a816fa9c610d86e78bf807 SHA512 47578f3cc25bdaeb942e88c7bb3bb4bbb6d61e5cb718d34c92963e764451587eb5e3d95e69b72c2ba70db29c34a9e6f2adc60e61af775b714db35590d3306b48 WHIRLPOOL e1112062fd88e3a1ad97ea664dc44a943b1345d36bd782cb6fe810c865241e45093d0532342a0442609112746670e0806570dd166a55cf4947b53d20da9df218
 DIST xvkbd-3.4a.tar.gz 79694 SHA256 a81dd585d642ee6df71fb8d2b86290ec33930fa2c029a412aeae1b4af665fb7b SHA512 f905c6c57c9b1243354dd0c3f7865cfbe26a53ebb66cfa9f46f5176882a5e05a074ac50555c4fe0195264b3e9d79f5191820aa3aac51e995ca286a4df8031f1d WHIRLPOOL 0d7b98db90a4e96502827cfb485c0915e5c0e0fa447518ab4d48a80349af728dfd877306bbc7084667ea02031b8001ce5db591b9be760ee85c15b727f18f6880
-EBUILD xvkbd-3.2.ebuild 1002 SHA256 0c57ae6abbbb74eb700ae8116077131a271028d93ae165f55e7416b9db3118b5 SHA512 b52af281c75439713d3426a467cb88601ee3449105a605d1bbeb87cdbf80d0e2994f5c83cd8204859109ae1f59aa075a003800c4caee8ba73c3f175e62432b9b WHIRLPOOL e2785be7a0358f8813ccd72810881e8252be170b52d6ed037f70ec1df1f3cf4da38c3ced923771c4e5b4477f996d7d5b06f7ca0b8519b4711980fe20c65cf7cd
+DIST xvkbd-3.5.tar.gz 108351 SHA256 8819bdba359f1d0894bfc0b3314d5cdb9107387de6f19d2f409dba15e82b8fee SHA512 e847512bf023a540127297420829cb73cc142fa06e3044a6a8b3d051f3fca38427f2a262c50e57afc94317acdd05f9d4e880faf4826887255e081c460bc4d305 WHIRLPOOL 1615c1095acd99b4c89cde08dcced1dcf055229032f14e5f3b3583a0251733f98a0eadd3ca2fd552316733a8a1e12e678fc67c9870a34a1ff199baf256196c8e
 EBUILD xvkbd-3.4a-r1.ebuild 1131 SHA256 25fbd9639eea4013dc05ae621ab68131ee70d99d4d744a9c7d2251bd231db7cd SHA512 5ded90153fe53f03373be1a941cfe114820ae18cf0e07e19fef9560cd3e3fc83e0c78e13d010a6bebf501e867baac3d5de7a9d6c44329fb02d03dceffebc5264 WHIRLPOOL d5a6f61bbe93141c0a62cc616482a46384c516d6c67e7352778927bf7601af10974edeeb44555b1d3ba7e26670fa878dff0e5b71ec0646efb8dffe758087712a
-MISC ChangeLog 3889 SHA256 4c8c7bb3c09ecd8b36a5bf3eb9f432e8000adcd7d1f58529631a189e58b754db SHA512 87294a375241bd85bc9e2fdb8698cf26e89e9c1fdc536c5a63b9255fa81af41b90c33c4b9d83dc1f6082f40ba399fba32626b7e361c8dc549f4762a8a8a4f609 WHIRLPOOL b4e3f6048216ed4f4e347cb41cf608b326a35633a948d288757111fe613f907ab8a0d7a6df3c43ededb31f942680c4b47567a9151f919e9ce73c0713091b095a
+EBUILD xvkbd-3.5.ebuild 1129 SHA256 c174a4a76eedd8d4a9fc51c3abf6ecab65380ac8a20d2d69a8eaebc812de592f SHA512 56d9cd2d6d4424a7bab404d611ec337ff9b07fc54d4ea5cc36e3cf59c571b4a7fa04fb014901c30f2bbaac7932015a5e7e9e27170eadc819eec852cd74f2361b WHIRLPOOL 006618190c0b87b02a2d4846c55fe216bd757d7ebd674699066985c36b5a73115bbab65a8287ea6be74a6fdb16b8c02eb84fdb67f17701529a0d1822f057dbde
+MISC ChangeLog 4019 SHA256 05796a99ad73054dc6640c8b36261a011bb36b1f5410e2b9c3a3eac2c30103ef SHA512 5ed329730b0cc3a116c556fad15e1b334628721818ceb75a77858da383e4b94d37c941a71ac4dae4c0158d04205f7d7035f2097f57fd927c5455b5f180fd4f5e WHIRLPOOL 2819f5b1620b1dc7a63a897603482e22d1336464c97787def74395301815a00699c2303f8cd4648856730d03dc41464d65f987ef751535601f598a2f0c9b25e7
 MISC metadata.xml 166 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826 SHA512 23980b683f9a89f988407b1dcc27a4465a18912f6e6cf8e1fed46182f00c4023d4802434f36b9482121ba9ffe9bc5d6e91b5d3a4ba9067fcfd8e57799c128fe3 WHIRLPOOL 96d79ff499e108ad89b80507c2e94a09af1e8031e5e2a7f9cecb2dddbf517872361436bdb983dc580660064a62663ad63aa1fad8f49dd3758253f4e378bfd297
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSc6EaAAoJEIN+7RD5ejah1m4IAKVaq3kyYB7HYev5NDJ06Us6
-0mFzA9upImBBK8VZBlAwDPshLzmsZJbJxWaye+ak64aU3Vrws9MyRcz4v3AX2ptG
-vyA4FDc0lFs5Ssgg8JUz1tEDpoHzFbx7DjrZ537DkwMvChlMaMmp9Rmpw2cpkawr
-HcFopyBA+e4SQk020aikEYjJjXr3rEq/MmecXEeV7rufdOcM0RqGVURN30+G5E+b
-a2VH3AB2XjfHNVWWaqS7q4aii4RP17uNXPlqEqaCVGPAGhzaHJC3vdpOHmerkRl4
-sEgz8ajytzMFocQ9trjQ4wqImeOCEF3c1TlAWotDGfF8LJGC0Fg/YwPA98k3vWg=
-=ZySu
+iEYEAREIAAYFAlN4O/4ACgkQVWmRsqeSphOttgCfQ7O6NVHtIKWOTlkaof9maSY+
+6wQAniKWrLfLhoDz3AhnVcxhQBbPYjVW
+=QwXu
 -----END PGP SIGNATURE-----
