@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/xdaliclock
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdaliclock/ChangeLog,v 1.42 2013/12/04 07:56:59 xmw Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdaliclock/ChangeLog,v 1.43 2014/05/18 04:40:33 jer Exp $
+
+*xdaliclock-2.41 (18 May 2014)
+
+  18 May 2014; Jeroen Roovers <jer@gentoo.org> -xdaliclock-2.39.ebuild,
+  -xdaliclock-2.40.ebuild, +xdaliclock-2.41.ebuild:
+  Version bump.
 
 *xdaliclock-2.40 (04 Dec 2013)
 
