@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/xvkbd
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xvkbd/ChangeLog,v 1.32 2013/11/01 12:40:24 yac Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xvkbd/ChangeLog,v 1.33 2014/05/18 04:50:04 jer Exp $
+
+*xvkbd-3.5 (18 May 2014)
+
+  18 May 2014; Jeroen Roovers <jer@gentoo.org> -xvkbd-3.2.ebuild,
+  +xvkbd-3.5.ebuild:
+  Version bump.
 
   01 Nov 2013; Jan Matejka <yac@gentoo.org> xvkbd-3.4a-r1.ebuild:
   + epatch_user
